fix: Composer discussion title not visible with certain colors

--- a/framework/core/less/forum/Composer.less
+++ b/framework/core/less/forum/Composer.less
@@ -39,7 +39,7 @@
   h3 {
     margin: 0;
     line-height: 1.5em;
-    color: var(--secondary-color);
+    color: var(--control-color);
 
     &,
     input,
